[gd_scene load_steps=3 format=3 uid="uid://dyh0oh0x2uxwd"]

[ext_resource type="Script" path="res://hud.gd" id="1_7hrj6"]
[ext_resource type="FontFile" uid="uid://ep44lh5ma04w" path="res://fonts/Xolonium-Regular.ttf" id="1_7tk2y"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_7hrj6")

[node name="ScoreLabel" type="Label" parent="."]
visible = false
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -130.0
offset_bottom = 78.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("1_7tk2y")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 2

[node name="MessageLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -106.5
offset_top = -39.5
offset_right = 106.5
offset_bottom = 39.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_7tk2y")
theme_override_font_sizes/font_size = 64
text = "Dodge the
creeps!"
horizontal_alignment = 1

[node name="GameStartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -112.0
offset_top = -200.0
offset_right = 112.0
offset_bottom = -89.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 64
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="button_down" from="GameStartButton" to="." method="_on_game_start_button_button_down"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
